manifests: name wifi/BT firmware files in packages lists
These were demoted to a recommends in F39 and we're not sure
if we want to drop them yet:
https://github.com/coreos/fedora-coreos-tracker/issues/1575

--- a/manifest-lock.ppc64le.json
+++ b/manifest-lock.ppc64le.json
@@ -39,6 +39,9 @@
     "amd-gpu-firmware": {
       "evra": "20230804-153.fc39.noarch"
     },
+    "atheros-firmware": {
+      "evra": "20230804-153.fc39.noarch"
+    },
     "attr": {
       "evra": "2.5.1-8.fc39.ppc64le"
     },
@@ -77,6 +80,9 @@
     },
     "bind-utils": {
       "evra": "32:9.18.17-1.fc39.ppc64le"
+    },
+    "brcmfmac-firmware": {
+      "evra": "20230804-153.fc39.noarch"
     },
     "bsdtar": {
       "evra": "3.7.1-1.fc39.ppc64le"
@@ -888,6 +894,9 @@
     "mpfr": {
       "evra": "4.2.0-3.fc39.ppc64le"
     },
+    "mt7xxx-firmware": {
+      "evra": "20230804-153.fc39.noarch"
+    },
     "nano": {
       "evra": "7.2-4.fc39.ppc64le"
     },
@@ -1055,6 +1064,9 @@
     },
     "readline": {
       "evra": "8.2-4.fc39.ppc64le"
+    },
+    "realtek-firmware": {
+      "evra": "20230804-153.fc39.noarch"
     },
     "rpcbind": {
       "evra": "1.2.6-4.rc2.fc39.1.ppc64le"
