--- a/manifest-lock.x86_64.json
+++ b/manifest-lock.x86_64.json
@@ -39,6 +39,9 @@
     "amd-gpu-firmware": {
       "evra": "20230804-153.fc39.noarch"
     },
+    "atheros-firmware": {
+      "evra": "20230804-153.fc39.noarch"
+    },
     "attr": {
       "evra": "2.5.1-8.fc39.x86_64"
     },
@@ -77,6 +80,9 @@
     },
     "bootupd": {
       "evra": "0.2.9-2.fc39.x86_64"
+    },
+    "brcmfmac-firmware": {
+      "evra": "20230804-153.fc39.noarch"
     },
     "bsdtar": {
       "evra": "3.7.1-1.fc39.x86_64"
@@ -900,6 +906,9 @@
     "mpfr": {
       "evra": "4.2.0-3.fc39.x86_64"
     },
+    "mt7xxx-firmware": {
+      "evra": "20230804-153.fc39.noarch"
+    },
     "nano": {
       "evra": "7.2-4.fc39.x86_64"
     },
@@ -1055,6 +1064,9 @@
     },
     "readline": {
       "evra": "8.2-4.fc39.x86_64"
+    },
+    "realtek-firmware": {
+      "evra": "20230804-153.fc39.noarch"
     },
     "rpcbind": {
       "evra": "1.2.6-4.rc2.fc39.1.x86_64"
