ci & tests: Switch to quay.io/fedora/fedora
Fedora is planning on deprecating the registry and moving to quay.io for
all containers.

Existing containers are mirrors to quay.io so we should be able to
switch now.

See: https://discussion.fedoraproject.org/t/registry-fedoraproject-org-to-quay-io-migration/88231
See: https://pagure.io/fedora-infrastructure/issue/10386

--- a/ci/buildroot/Dockerfile
+++ b/ci/buildroot/Dockerfile
@@ -5,6 +5,6 @@
 #
 # This image is used by CoreOS CI to build software like
 # Ignition, rpm-ostree, ostree, coreos-installer, etc...
-FROM registry.fedoraproject.org/fedora:38
+FROM quay.io/fedora/fedora:38
 COPY . /src
 RUN ./src/install-buildroot.sh && yum clean all && rm /src -rf
