--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -29,3 +29,9 @@
     - rawhide
     - next-devel
     - next
+- pattern: ext.config.docker.basic
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1578
+  snooze: 2023-10-13
+  warn: true
+  streams:
+    - rawhide
