--- a/manifests/fedora-coreos.yaml
+++ b/manifests/fedora-coreos.yaml
@@ -56,6 +56,11 @@ conditional-include:
     # Merge with manifests/system-configuration.yaml once Fedora 39 is released
     # to all streams
     include: audit.yaml
+  - if: releasever >= 39
+    # https://github.com/coreos/fedora-coreos-tracker/issues/1567
+    # Merge with manifests/fedora-coreos.yaml once Fedora 39 is released
+    # to all streams
+    include: bash-color-prompt.yaml
 
 ostree-layers:
   - overlay/15fcos
