--- a/manifest-lock.x86_64.json
+++ b/manifest-lock.x86_64.json
@@ -189,6 +189,9 @@
     "crun": {
       "evra": "1.9-1.fc39.x86_64"
     },
+    "crun-wasm": {
+      "evra": "1.9-1.fc39.x86_64"
+    },
     "crypto-policies": {
       "evra": "20230731-1.git5ed06e0.fc39.noarch"
     },
@@ -326,6 +329,9 @@
     },
     "flatpak-session-helper": {
       "evra": "1.15.4-3.fc39.x86_64"
+    },
+    "fmt": {
+      "evra": "10.0.0-3.fc39.x86_64"
     },
     "fstrm": {
       "evra": "0.6.1-8.fc39.x86_64"
@@ -1152,6 +1158,9 @@
     "socat": {
       "evra": "1.7.4.4-3.fc39.x86_64"
     },
+    "spdlog": {
+      "evra": "1.12.0-2.fc39.x86_64"
+    },
     "sqlite-libs": {
       "evra": "3.42.0-7.fc39.x86_64"
     },
@@ -1244,6 +1253,9 @@
     },
     "vim-minimal": {
       "evra": "2:9.0.1927-1.fc39.x86_64"
+    },
+    "wasmedge-rt": {
+      "evra": "0.13.3-1.fc39.x86_64"
     },
     "which": {
       "evra": "2.21-40.fc39.x86_64"
