Revert "coreos-teardown-initramfs: use NetworkManager to teardown networking"
This reverts commit b8607dabb5e1a5a0795fe11b5089889038c150f6.

We're seeing around 75% failure rate with this patch when provisioning
RHCOS on AWS with m4 instance types. The error message is:

    Error: failed to set networking: Timeout was reached

I confirmed that D-Bus and NM are definitely still running when we issue
the `nmcli` call. Still, I think there's a subtle race somewhere (likely
combined with the specific network adapter of m4 instance types), that
we need to plug. We need more visibility into why NM isn't responding.
Anyway, for now let's revert this to not regress.

Fixes: https://issues.redhat.com/browse/OCPBUGS-17154
Probably fixes: https://issues.redhat.com/browse/OCPBUGS-19870

--- a/overlay.d/05core/usr/lib/dracut/modules.d/35coreos-ignition/coreos-teardown-initramfs.service
+++ b/overlay.d/05core/usr/lib/dracut/modules.d/35coreos-ignition/coreos-teardown-initramfs.service
@@ -18,13 +18,13 @@ DefaultDependencies=false
 Before=ignition-mount.service
 Before=ignition-complete.target
 
-# Since we are tearing down networking using NetworkManager itself
-# we need to make sure NetworkManager is running. Similarly
-# dbus-broker since nmcli talks to the daemon via DBUS. Since the
-# ordering for ExecStop is the opposite of ExecStart we need to use
-# `After=` here.
-After=nm-initrd.service
-After=dbus-broker.service
+# Since we are tearing down networking we need to make sure
+# NetworkManager has been stopped, otherwise it'll be trying
+# to react to our delete/down operations. Since the ordering
+# for ExecStop is the opposite of ExecStart we need to use
+# `Before=nm-initrd.service`.
+# https://issues.redhat.com/browse/OCPBUGS-11052
+Before=nm-initrd.service
 
 # Make sure ExecStop= runs before we switch root
 Conflicts=initrd-switch-root.target umount.target
