core/dracut/ignition-ostree: add `chroot` binary

--- a/overlay.d/05core/usr/lib/dracut/modules.d/40ignition-ostree/ignition-ostree-sysusers.service
+++ b/overlay.d/05core/usr/lib/dracut/modules.d/40ignition-ostree/ignition-ostree-sysusers.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Populate OSTree sysusers
+Description=Ignition OSTree: Create System Users
 DefaultDependencies=false
 ConditionKernelCommandLine=|ostree
 
