[next-devel] overrides: fast-track downgraded packages
F39 is now in final freeze. This means some packages in F38 will
sort as newer than packages in F39. We'll prevent downgrades by
fast-tracking any packages that would violoate this "no downgrade"
rule.

Today they are: aardvark-dns, fwupd, google-compute-engine-guest-configs,
grub2, gvisor-tap-vsock, gcc, libnet, libsolv, netavark, passt,
rpm-ostree, selinux-policy, vim, zchunk.

--- a/manifest-lock.overrides.aarch64.yaml
+++ b/manifest-lock.overrides.aarch64.yaml
@@ -15,3 +15,45 @@ packages:
       bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2023-3e03106a9e
       reason: https://github.com/coreos/fedora-coreos-tracker/issues/1490#issuecomment-1720020468
       type: fast-track
+  grub2-common:
+    evra: 1:2.06-104.fc39.noarch
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2023-f46483e5b5
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1490#issuecomment-1720020468
+      type: fast-track
+  grub2-efi-aa64:
+    evra: 1:2.06-104.fc39.aarch64
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2023-f46483e5b5
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1490#issuecomment-1720020468
+      type: fast-track
+  grub2-tools:
+    evra: 1:2.06-104.fc39.aarch64
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2023-f46483e5b5
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1490#issuecomment-1720020468
+      type: fast-track
+  grub2-tools-minimal:
+    evra: 1:2.06-104.fc39.aarch64
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2023-f46483e5b5
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1490#issuecomment-1720020468
+      type: fast-track
+  libatomic:
+    evra: 13.2.1-4.fc39.aarch64
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2023-1c6c5ebe1a
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1490#issuecomment-1720020468
+      type: fast-track
+  libgcc:
+    evra: 13.2.1-4.fc39.aarch64
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2023-1c6c5ebe1a
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1490#issuecomment-1720020468
+      type: fast-track
+  libstdc++:
+    evra: 13.2.1-4.fc39.aarch64
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2023-1c6c5ebe1a
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1490#issuecomment-1720020468
+      type: fast-track
