manifests: include wasm packages in fedora-coreos-base manifest
It's a bit confusing to folks that this didn't make it into the
testing and stable streams [1]. Let's just include them on all
streams like we agreed to originally.

[1] https://github.com/coreos/fedora-coreos-tracker/issues/1375#issuecomment-1750114083

--- a/manifest-lock.aarch64.json
+++ b/manifest-lock.aarch64.json
@@ -183,6 +183,9 @@
     "crun": {
       "evra": "1.10-1.fc38.aarch64"
     },
+    "crun-wasm": {
+      "evra": "1.10-1.fc38.aarch64"
+    },
     "crypto-policies": {
       "evra": "20230301-1.gita12f7b2.fc38.noarch"
     },
@@ -323,6 +326,9 @@
     },
     "flatpak-session-helper": {
       "evra": "1.15.4-1.fc38.aarch64"
+    },
+    "fmt": {
+      "evra": "9.1.0-2.fc38.aarch64"
     },
     "fstrm": {
       "evra": "0.6.1-6.fc38.aarch64"
@@ -1149,6 +1155,9 @@
     "socat": {
       "evra": "1.7.4.4-2.fc38.aarch64"
     },
+    "spdlog": {
+      "evra": "1.11.0-5.fc38.aarch64"
+    },
     "sqlite-libs": {
       "evra": "3.40.1-2.fc38.aarch64"
     },
@@ -1241,6 +1250,9 @@
     },
     "vim-minimal": {
       "evra": "2:9.0.2048-1.fc38.aarch64"
+    },
+    "wasmedge-rt": {
+      "evra": "0.13.4-2.fc38.aarch64"
     },
     "which": {
       "evra": "2.21-39.fc38.aarch64"
