--- a/manifest-lock.x86_64.json
+++ b/manifest-lock.x86_64.json
@@ -183,6 +183,9 @@
     "crun": {
       "evra": "1.10-1.fc38.x86_64"
     },
+    "crun-wasm": {
+      "evra": "1.10-1.fc38.x86_64"
+    },
     "crypto-policies": {
       "evra": "20230301-1.gita12f7b2.fc38.noarch"
     },
@@ -323,6 +326,9 @@
     },
     "flatpak-session-helper": {
       "evra": "1.15.4-1.fc38.x86_64"
+    },
+    "fmt": {
+      "evra": "9.1.0-2.fc38.x86_64"
     },
     "fstrm": {
       "evra": "0.6.1-6.fc38.x86_64"
@@ -1152,6 +1158,9 @@
     "socat": {
       "evra": "1.7.4.4-2.fc38.x86_64"
     },
+    "spdlog": {
+      "evra": "1.11.0-5.fc38.x86_64"
+    },
     "sqlite-libs": {
       "evra": "3.40.1-2.fc38.x86_64"
     },
@@ -1244,6 +1253,9 @@
     },
     "vim-minimal": {
       "evra": "2:9.0.2048-1.fc38.x86_64"
+    },
+    "wasmedge-rt": {
+      "evra": "0.13.4-2.fc38.x86_64"
     },
     "which": {
       "evra": "2.21-39.fc38.x86_64"
