--- a/manifest.yaml
+++ b/manifest.yaml
@@ -11,6 +11,7 @@ repos:
   # GitHub Action.
   - fedora-next
   - fedora-next-updates
+  - fedora-candidate-compose
 
 include: manifests/fedora-coreos.yaml
 
