overrides: pin rust-zincati-0.0.25-6.fc39

--- a/manifest-lock.overrides.yaml
+++ b/manifest-lock.overrides.yaml
@@ -185,5 +185,5 @@ packages:
   zincati:
     evr: 0.0.25-6.fc39
     metadata:
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1608#issuecomment-1802126860
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1608
       type: pin
